# advent-of-code

./: .gitignore  Cargo.toml  README.md
2024/: Cargo.toml
2024/_templates/day/new/: prompt.js
2024/_templates/day/new/src/: functions.ejs.t  input.rs.ejs.t  input.txt.ejs.t
2024/src/: main.rs
2025/: Cargo.toml  README.md  polygon.txt
2025/_templates/day/new/: Cargo.ejs.t
2025/_templates/day/new/src/: main.ejs.t  solution.ejs.t
_templates/day/new/src/: input.rs.ejs.t  main.ejs.t  solution.ejs.t  solution.txt.ejs.t
