[package]
name = "advent-of-code"
version = "1.0.0"
edition = "2021"

[workspace]
members = [
  "packages/utils",
  "packages/day-1",
  "packages/day-2",
  "packages/day-3",
  "packages/day-4",
  "packages/day-5",
  "packages/day-6",
  "packages/day-7",
  "packages/day-8",
  "packages/day-9"
]

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["Sylvain Marty"]

[dependencies]

[workspace.dependencies]
utils = { version = "1.0.0", path = "packages/utils" }

[[bin]]
name = "test"
path = "packages/day-1/src/main.rs"
