[package]
name = "advent-of-code-2025"
version = "1.0.0"
edition = "2021"

[workspace]
members = [
  "packages/utils",
  "packages/day-1",
  "packages/day-2",
  "packages/day-3",
  "packages/day-4"
]

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["Sylvain Marty"]

[dependencies]

[workspace.dependencies]
good_lp = { version = "1.10.0", features = ["lpsolve"]}
utils = { version = "1.0.0", path = "packages/utils" }

[workspace.lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "root"
path = "src/main.rs"
